--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							</div>
 							<nav class="main_nav_contaner">
 								<ul class="main_nav">
-									<li class="active"><a href="index.html">Home</a></li>
+									<li class="active"><a href="index.html">Главная</a></li>
 									<li><a href="courses.html">Courses</a></li>
 									<li><a href="instructors.html">Instructors</a></li>
 									<li><a href="#">Events</a></li>
