--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col text-center">
-						<h1 class="home_title">Learn Languages Easily</h1>
+						<h1 class="home_title">Учите языки легко!</h1>
 						<div class="home_button trans_200"><a href="#">get started</a></div>
 					</div>
 				</div>
