--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				<div class="row">
 					<div class="col text-center">
 						<h1 class="home_title">Учите языки легко!</h1>
-						<div class="home_button trans_200"><a href="#">get started</a></div>
+						<div class="home_button trans_200"><a href="#">начать</a></div>
 					</div>
 				</div>
 			</div>
