--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			</ul>
 		</nav>
 		<div class="menu_extra">
-			<div class="menu_phone"><span class="menu_title">phone:</span>+44 300 303 0266</div>
+			<div class="menu_phone"><span class="menu_title">телефон:</span>+7 999 999 99 99</div>
 			<div class="menu_social">
 				<span class="menu_title">follow us</span>
 				<ul>
