--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<div class="top_bar_phone"><span class="top_bar_title">phone:</span>+44 300 303 0266</div>
+								<div class="top_bar_phone"><span class="top_bar_title">телефон:</span>+7 999 999 99 99</div>
 								<div class="top_bar_right ml-auto">
 
 									<!-- Language -->
