--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 										<span class="top_bar_title">site language:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
-												<a href="#">English<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+												<a href="#">Английский<i class="fa fa-angle-down" aria-hidden="true"></i></a>
 												<ul>
-													<li><a href="#">Ukrainian</a></li>
-													<li><a href="#">Japanese</a></li>
-													<li><a href="#">Lithuanian</a></li>
-													<li><a href="#">Swedish</a></li>
-													<li><a href="#">Italian</a></li>
+													<li><a href="#">Испанский</a></li>
+													<li><a href="#">Японский</a></li>
+													<li><a href="#">Литовский</a></li>
+													<li><a href="#">Шведский</a></li>
+													<li><a href="#">Итальянский</a></li>
 												</ul>
 											</li>
 										</ul>
