--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Ukrainian.svg" alt=""></div>
-									<div class="lang_name">Ukrainian</div>
+									<div class="lang_name">Испанский</div>
 								</a>
 							</div>
 
@@ -190,7 +190,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Japanese.svg" alt=""></div>
-									<div class="lang_name">Japanese</div>
+									<div class="lang_name">Японский</div>
 								</a>
 							</div>
 
@@ -198,7 +198,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Lithuanian.svg" alt=""></div>
-									<div class="lang_name">Lithuanian</div>
+									<div class="lang_name">Литовский</div>
 								</a>
 							</div>
 
@@ -206,7 +206,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Swedish.svg" alt=""></div>
-									<div class="lang_name">Swedish</div>
+									<div class="lang_name">Шведский</div>
 								</a>
 							</div>
 
@@ -214,7 +214,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/English.svg" alt=""></div>
-									<div class="lang_name">English</div>
+									<div class="lang_name">Английский</div>
 								</a>
 							</div>
 
@@ -222,7 +222,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Italian.svg" alt=""></div>
-									<div class="lang_name">Italian</div>
+									<div class="lang_name">Итальянский</div>
 								</a>
 							</div>
 
@@ -230,7 +230,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Chinese.svg" alt=""></div>
-									<div class="lang_name">Chinese</div>
+									<div class="lang_name">Китайский</div>
 								</a>
 							</div>
 
@@ -238,7 +238,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/French.svg" alt=""></div>
-									<div class="lang_name">French</div>
+									<div class="lang_name">Французский</div>
 								</a>
 							</div>
 
@@ -246,7 +246,7 @@
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/German.svg" alt=""></div>
-									<div class="lang_name">German</div>
+									<div class="lang_name">Немецкий</div>
 								</a>
 							</div>
 
@@ -267,7 +267,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h2 class="section_title text-center">Popular Online Courses</h2>
+					<h2 class="section_title text-center">Популярные курсы</h2>
 				</div>
 			</div>
 			<div class="row courses_row">
