--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Language -->
 									<div class="top_bar_lang">
-										<span class="top_bar_title">site language:</span>
+										<span class="top_bar_title">язык сайта:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
 												<a href="#">Английский<i class="fa fa-angle-down" aria-hidden="true"></i></a>
