--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h2 class="section_title text-center">The Best Tutors in Town</h2>
+					<h2 class="section_title text-center">Наши лучшие педагоги</h2>
 				</div>
 			</div>
 			<div class="row instructors_row">
@@ -370,10 +370,10 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_1.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Мария Сорокина</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Мария Сорокина превращает каждое занятие испанским в яркое путешествие по культуре Испании и Латинской Америки. Её ученики не просто осваивают грамматику, а начинают думать и чувствовать по-испански, благодаря её живым и погружающим урокам.</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
@@ -391,10 +391,10 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_2.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Антуан Дюваль</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Антуан Дюваль с изяществом настоящего парижанина раскрывает своим студентам тонкости и красоту французского языка. На его уроках царит атмосфера настоящего французского кафе, где сложные правила усваиваются легко и непринужденно.</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
@@ -412,10 +412,12 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_3.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Ли Чжэнь</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Ли Чжэнь мастерски проводит своих учеников по лабиринту китайского языка, делая доступными даже самые сложные иероглифы и тоны. Её уроки — это не просто изучение языка, а погружение в древнюю философию и современные реалии Китая.
+
+</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
