--- a/course.html
+++ b/course.html
@@ -178,12 +178,12 @@
 				<div class="col">
 					<div class="intro_container d-flex flex-column align-items-start justify-content-end">
 						<div class="intro_content">
-							<div class="intro_price">Free</div>
+							<div class="intro_price">2500</div>
 							<div class="rating_r rating_r_4 intro_rating"><i></i><i></i><i></i><i></i><i></i></div>
-							<div class="intro_title">Vocabulary. Part 1</div>
+							<div class="intro_title">Испанский для начинающих</div>
 							<div class="intro_meta">
 								<div class="intro_image"><img src="images/intro_user.jpg" alt=""></div>
-								<div class="intro_instructors"><a href="instructors.html">Sarah Parker</a> and <span><a href="instructors.html">5 other instructors</a></span></div>
+								<div class="intro_instructors"><a href="instructors.html">Мария Сорокина</a></div>
 							</div>
 						</div>
 					</div>
@@ -209,10 +209,10 @@
 								<div class="row">
 									<div class="col-lg-9">
 										<div class="tabs d-flex flex-row align-items-center justify-content-start">
-											<div class="tab active">description</div>
-											<div class="tab">curriculum</div>
-											<div class="tab">reviews</div>
-											<div class="tab">members</div>
+											<div class="tab active">описание</div>
+											<div class="tab">занятия</div>
+											<div class="tab">отзывы</div>
+											<div class="tab">студенты</div>
 										</div>
 									</div>
 								</div>
@@ -221,14 +221,14 @@
 
 						<!-- Description -->
 						<div class="tab_panel description active">
-							<div class="panel_title">About this course</div>
+							<div class="panel_title">О курсе</div>
 							<div class="panel_text">
-								<p>Nam egestas lorem ex, sit amet commodo tortor faucibus a. Suspendisse commodo, turpis a dapibus fermentum, turpis ipsum rhoncus massa, sed commodo nisi lectus id ipsum. Sed nec elit vehicula, aliquam neque euismod, porttitor ex. Nam consequat iaculis maximus. Suspendisse potenti. In rutrum justo et diam egestas luctus. Mauris eu neque eget odio suscipit eleifend. Sed imperdiet ante quis felis tempor hendrerit. Curabitur eget fermentum ipsum. Sed efficitur eget velit eu vulputate. Duis tincidunt quam in erat dignissim consequat. Praesent tempus leo eu nisl fringilla interdum. Maecenas rutrum libero eget lacus bibendum tristique. Curabitur at felis lobortis, mollis ante ut, tempus elit. Morbi justo nisi, posuere sed augue id, iaculis tincidunt mi. Pellentesque sed dolor sed dui congue tempus a et felis.</p>
+								<p>Этот курс идеально подойдет для тех, кто только начинает свое знакомство с испанским языком. Вы с нуля освоите базовую грамматику, ключевую лексику для повседневного общения и правильное произношение. Занятия проходят в увлекательном формате: мы не только учим правила, но и много общаемся, играем и смотрим видео. Акцент делается на практическое применение языка в реальных ситуациях: знакомство, путешествие, кафе, шопинг. К концу курса вы сможете уверенно строить диалоги на бытовые темы и преодолеете языковой барьер. Начните говорить по-испански с нами!</p>
 							</div>
 							
 							<!-- Instructors -->
 							<div class="instructors">
-								<div class="panel_title">All instructors</div>
+								<div class="panel_title">Педагог</div>
 								<div class="row instructors_row">
 
 									<!-- Instructor -->
@@ -236,13 +236,14 @@
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_4.jpg" alt=""></div></div>
 											<div class="instructor_content">
-												<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-												<div class="instructor_title">Teacher</div>
+												<div class="instructor_name"><a href="instructors.html">Мария Сорокина</a></div>
+												<div class="instructor_title">Педагог</div>
 											</div>
 										</div>
 									</div>
 
 									<!-- Instructor -->
+									<!--
 									<div class="col-lg-4 col-md-6">
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_5.jpg" alt=""></div></div>
@@ -254,6 +255,7 @@
 									</div>
 
 									<!-- Instructor -->
+									<!--
 									<div class="col-lg-4 col-md-6">
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_6.jpg" alt=""></div></div>
@@ -265,6 +267,7 @@
 									</div>
 
 									<!-- Instructor -->
+									<!--
 									<div class="col-lg-4 col-md-6">
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_7.jpg" alt=""></div></div>
@@ -276,6 +279,7 @@
 									</div>
 
 									<!-- Instructor -->
+									<!--
 									<div class="col-lg-4 col-md-6">
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_8.jpg" alt=""></div></div>
@@ -287,6 +291,7 @@
 									</div>
 
 									<!-- Instructor -->
+									<!--
 									<div class="col-lg-4 col-md-6">
 										<div class="instructor d-flex flex-row align-items-center justify-content-start">
 											<div class="instructor_image"><div><img src="images/instructor_9.jpg" alt=""></div></div>
@@ -302,36 +307,36 @@
 
 							<!-- FAQs -->
 							<div class="faqs">
-								<div class="panel_title">FAQs</div>
+								<div class="panel_title">Вопросы</div>
 								<div class="accordions">
 												
 									<div class="elements_accordions">
 
 										<div class="accordion_container">
-											<div class="accordion d-flex flex-row align-items-center active"><div>Can I just enroll in a single course? I'm not interested in the entire Specializat</div></div>
+											<div class="accordion d-flex flex-row align-items-center active"><div>У меня нет способностей к языкам. Смогу ли я научиться?</div></div>
 											<div class="accordion_panel">
-												<p>Nam egestas lorem ex, sit amet commodo tortor faucibus a. Suspendisse commodo, turpis a dapibus fermentum, turpis ipsum rhoncus massa, sed commodo nisi lectus id ipsum. Sed nec elit vehicula, aliquam neque euismod, porttitor ex. Nam consequat iaculis maximus.</p>
+												<p>Конечно! Курс создан специально для новичков. Наши преподаватели используют понятную методику и поддерживают каждого студента, что гарантирует результат независимо от начального уровня.</p>
 											</div>
 										</div>
 
 										<div class="accordion_container">
-											<div class="accordion d-flex flex-row align-items-center"><div>What is the refund policy?</div></div>
+											<div class="accordion d-flex flex-row align-items-center"><div>Сколько длится курс и как построено обучение?</div></div>
 											<div class="accordion_panel">
-												<p>Nam egestas lorem ex, sit amet commodo tortor faucibus a. Suspendisse commodo, turpis a dapibus fermentum, turpis ipsum rhoncus massa, sed commodo nisi lectus id ipsum. Sed nec elit vehicula, aliquam neque euismod, porttitor ex. Nam consequat iaculis maximus.</p>
+												<p>Курс рассчитан на 2 недели. Обучение включает в себя теорию, живую практику общения, аудирование и интерактивные задания.</p>
 											</div>
 										</div>
 
 										<div class="accordion_container">
-											<div class="accordion d-flex flex-row align-items-center"><div>What background knowledge is necessary</div></div>
+											<div class="accordion d-flex flex-row align-items-center"><div>Какие материалы нужны для занятий?</div></div>
 											<div class="accordion_panel">
-												<p>Nam egestas lorem ex, sit amet commodo tortor faucibus a. Suspendisse commodo, turpis a dapibus fermentum, turpis ipsum rhoncus massa, sed commodo nisi lectus id ipsum. Sed nec elit vehicula, aliquam neque euismod, porttitor ex. Nam consequat iaculis maximus.</p>
+												<p>Все основные материалы и учебные пособия мы предоставляем в электронном виде. Вам понадобится только тетрадь для записей и желание учиться.</p>
 											</div>
 										</div>
 
 										<div class="accordion_container">
-											<div class="accordion d-flex flex-row align-items-center"><div>Do i need to take the courses in a specific ord</div></div>
+											<div class="accordion d-flex flex-row align-items-center"><div>Мы будем заниматься разговорной практикой с самого начала?</div></div>
 											<div class="accordion_panel">
-												<p>Nam egestas lorem ex, sit amet commodo tortor faucibus a. Suspendisse commodo, turpis a dapibus fermentum, turpis ipsum rhoncus massa, sed commodo nisi lectus id ipsum. Sed nec elit vehicula, aliquam neque euismod, porttitor ex. Nam consequat iaculis maximus.</p>
+												<p>Да, это ключевой принцип нашего курса. Вы начнете говорить простые фразы и вести мини-диалоги уже на первом занятии, чтобы сразу применять знания на практике.</p>
 											</div>
 										</div>
 
