--- a/course.html
+++ b/course.html
@@ -29,21 +29,21 @@
 					<div class="row">
 						<div class="col">
 							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<div class="top_bar_phone"><span class="top_bar_title">phone:</span>+44 300 303 0266</div>
+								<div class="top_bar_phone"><span class="top_bar_title">телефон:</span>+7 999 999 99 99</div>
 								<div class="top_bar_right ml-auto">
 
 									<!-- Language -->
 									<div class="top_bar_lang">
-										<span class="top_bar_title">site language:</span>
+										<span class="top_bar_title">язык сайта:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
-												<a href="#">English<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+												<a href="#">Русский<i class="fa fa-angle-down" aria-hidden="true"></i></a>
 												<ul>
-													<li><a href="#">Ukrainian</a></li>
-													<li><a href="#">Japanese</a></li>
-													<li><a href="#">Lithuanian</a></li>
-													<li><a href="#">Swedish</a></li>
-													<li><a href="#">Italian</a></li>
+													<li><a href="#">Английский</a></li>
+													<li><a href="#">Японский</a></li>
+													<li><a href="#">Литовский</a></li>
+													<li><a href="#">Шведский</a></li>
+													<li><a href="#">Итальянский</a></li>
 												</ul>
 											</li>
 										</ul>
@@ -51,11 +51,15 @@
 
 									<!-- Social -->
 									<div class="top_bar_social">
+										<!--
 										<span class="top_bar_title social_title">follow us</span>
+										-->
 										<ul>
+											<!--
 											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+											-->
 										</ul>
 									</div>
 								</div>
@@ -79,12 +83,12 @@
 							</div>
 							<nav class="main_nav_contaner">
 								<ul class="main_nav">
-									<li><a href="index.html">Home</a></li>
-									<li class="active"><a href="courses.html">Courses</a></li>
-									<li><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="index.html">Главная</a></li>
+									<li class="active"><a href="courses.html">Курсы</a></li>
+									<li><a href="instructors.html">Педагоги</a></li>
+									<li><a href="#">События</a></li>
+									<li><a href="blog.html">Блог</a></li>
+									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_content_right ml-auto text-right">
@@ -129,22 +133,26 @@
 		</div>
 		<nav class="menu_nav">
 			<ul class="menu_mm">
-				<li class="menu_mm"><a href="index.html">Home</a></li>
-				<li class="menu_mm"><a href="courses.html">Courses</a></li>
-				<li class="menu_mm"><a href="instructors.html">Instructors</a></li>
-				<li class="menu_mm"><a href="#">Events</a></li>
-				<li class="menu_mm"><a href="blog.html">Blog</a></li>
-				<li class="menu_mm"><a href="contact.html">Contact</a></li>
+				<li class="menu_mm"><a href="index.html">Главная</a></li>
+				<li class="menu_mm"><a href="courses.html">Курсы</a></li>
+				<li class="menu_mm"><a href="instructors.html">Педагоги</a></li>
+				<li class="menu_mm"><a href="#">События</a></li>
+				<li class="menu_mm"><a href="blog.html">Блог</a></li>
+				<li class="menu_mm"><a href="contact.html">Контакты</a></li>
 			</ul>
 		</nav>
 		<div class="menu_extra">
-			<div class="menu_phone"><span class="menu_title">phone:</span>+44 300 303 0266</div>
+			<div class="menu_phone"><span class="menu_title">телефон:</span>+7 999 999 99 99</div>
 			<div class="menu_social">
+				<!--
 				<span class="menu_title">follow us</span>
+				-->
 				<ul>
+					<!--
 					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					-->
 				</ul>
 			</div>
 		</div>
@@ -158,10 +166,10 @@
 				<div class="row">
 					<div class="col">
 						<ul class="breadcrumbs_list d-flex flex-row align-items-center justify-content-start">
-							<li><a href="index.html">home</a></li>
-							<li><a href="courses.html">courses</a></li>
-							<li><a href="courses.html">spanish</a></li>
-							<li>vocabulary</li>
+							<li><a href="index.html">главная</a></li>
+							<li><a href="courses.html">курсы</a></li>
+							<li><a href="courses.html">испанский</a></li>
+							<li>Испанский для начинающих</li>
 						</ul>
 					</div>
 				</div>
@@ -178,7 +186,7 @@
 				<div class="col">
 					<div class="intro_container d-flex flex-column align-items-start justify-content-end">
 						<div class="intro_content">
-							<div class="intro_price">2500</div>
+							<div class="intro_price">бесплатно</div>
 							<div class="rating_r rating_r_4 intro_rating"><i></i><i></i><i></i><i></i><i></i></div>
 							<div class="intro_title">Испанский для начинающих</div>
 							<div class="intro_meta">
