--- a/instructors.html
+++ b/instructors.html
@@ -30,21 +30,21 @@
 					<div class="row">
 						<div class="col">
 							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<div class="top_bar_phone"><span class="top_bar_title">phone:</span>+44 300 303 0266</div>
+								<div class="top_bar_phone"><span class="top_bar_title">телефон:</span>+7 999 999 99 99</div>
 								<div class="top_bar_right ml-auto">
 
 									<!-- Language -->
 									<div class="top_bar_lang">
-										<span class="top_bar_title">site language:</span>
+										<span class="top_bar_title">язык сайта:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
-												<a href="#">English<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+												<a href="#">Русский<i class="fa fa-angle-down" aria-hidden="true"></i></a>
 												<ul>
-													<li><a href="#">Ukrainian</a></li>
-													<li><a href="#">Japanese</a></li>
-													<li><a href="#">Lithuanian</a></li>
-													<li><a href="#">Swedish</a></li>
-													<li><a href="#">Italian</a></li>
+													<li><a href="#">Английский</a></li>
+													<li><a href="#">Японский</a></li>
+													<li><a href="#">Литовский</a></li>
+													<li><a href="#">Шведский</a></li>
+													<li><a href="#">Итальянский</a></li>
 												</ul>
 											</li>
 										</ul>
@@ -52,11 +52,15 @@
 
 									<!-- Social -->
 									<div class="top_bar_social">
+										<!--
 										<span class="top_bar_title social_title">follow us</span>
+										-->
 										<ul>
+											<!--
 											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+											-->
 										</ul>
 									</div>
 								</div>
@@ -80,12 +84,12 @@
 							</div>
 							<nav class="main_nav_contaner">
 								<ul class="main_nav">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="courses.html">Courses</a></li>
-									<li class="active"><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="index.html">Главная</a></li>
+									<li><a href="courses.html">Курсы</a></li>
+									<li class="active"><a href="instructors.html">Педагоги</a></li>
+									<li><a href="#">События</a></li>
+									<li><a href="blog.html">Блог</a></li>
+									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_content_right ml-auto text-right">
@@ -130,22 +134,26 @@
 		</div>
 		<nav class="menu_nav">
 			<ul class="menu_mm">
-				<li class="menu_mm"><a href="index.html">Home</a></li>
-				<li class="menu_mm"><a href="courses.html">Courses</a></li>
-				<li class="menu_mm"><a href="instructors.html">Instructors</a></li>
-				<li class="menu_mm"><a href="#">Events</a></li>
-				<li class="menu_mm"><a href="blog.html">Blog</a></li>
-				<li class="menu_mm"><a href="contact.html">Contact</a></li>
+				<li class="menu_mm"><a href="index.html">Главная</a></li>
+				<li class="menu_mm"><a href="courses.html">Курсы</a></li>
+				<li class="menu_mm"><a href="instructors.html">Педагоги</a></li>
+				<li class="menu_mm"><a href="#">события</a></li>
+				<li class="menu_mm"><a href="blog.html">Блог</a></li>
+				<li class="menu_mm"><a href="contact.html">Контакты</a></li>
 			</ul>
 		</nav>
 		<div class="menu_extra">
-			<div class="menu_phone"><span class="menu_title">phone:</span>+44 300 303 0266</div>
+			<div class="menu_phone"><span class="menu_title">телефон:</span>+7 999 999 99 99</div>
 			<div class="menu_social">
+				<!--
 				<span class="menu_title">follow us</span>
+				-->
 				<ul>
+					<!--
 					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					-->
 				</ul>
 			</div>
 		</div>
@@ -171,7 +179,9 @@
 								</video>
 							</div>
 						</div>
+						<!--
 						<div class="register_button"><a href="#">register</a></div>
+						-->
 					</div>
 				</div>
 			</div>
@@ -185,7 +195,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h2 class="section_title text-center">The Best Tutors in Town</h2>
+					<h2 class="section_title text-center">Наши лучшие педагоги</h2>
 				</div>
 			</div>
 			<div class="row instructors_row">
@@ -196,16 +206,18 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_1.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Мария Сорокина</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Мария Сорокина превращает каждое занятие испанским в яркое путешествие по культуре Испании и Латинской Америки. Её ученики не просто осваивают грамматику, а начинают думать и чувствовать по-испански, благодаря её живым и погружающим урокам.</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
+								<!--
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div>
@@ -217,16 +229,18 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_2.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Антуан Дюваль</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Антуан Дюваль с изяществом настоящего парижанина раскрывает своим студентам тонкости и красоту французского языка. На его уроках царит атмосфера настоящего французского кафе, где сложные правила усваиваются легко и непринужденно.</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
+								<!--
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div>
@@ -238,16 +252,18 @@
 						<div class="instructor_image_container">
 							<div class="instructor_image"><img src="images/instructor_3.jpg" alt=""></div>
 						</div>
-						<div class="instructor_name"><a href="instructors.html">Sarah Parker</a></div>
-						<div class="instructor_title">Teacher</div>
+						<div class="instructor_name"><a href="instructors.html">Ли Чжэнь</a></div>
+						<div class="instructor_title">Педагог</div>
 						<div class="instructor_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla, mollis eu metus in, sagittis fringilla tortor.</p>
+							<p>Ли Чжэнь мастерски проводит своих учеников по лабиринту китайского языка, делая доступными даже самые сложные иероглифы и тоны. Её уроки — это не просто изучение языка, а погружение в древнюю философию и современные реалии Китая.</p>
 						</div>
 						<div class="instructor_social">
 							<ul>
+								<!--
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								-->
 							</ul>
 						</div>
 					</div>
