--- a/instructors.html
+++ b/instructors.html
@@ -395,6 +395,7 @@
 				<div class="row">
 
 					<!-- Newsletter -->
+					<!--
 					<div class="col-lg-3 footer_col">
 						<div class="newsletter_container d-flex flex-column align-items-start justify-content-end">
 							<div class="footer_logo mb-auto"><a href="#">Lingua</a></div>
@@ -407,6 +408,7 @@
 					</div>
 
 					<!-- About -->
+					<!--
 					<div class="col-lg-2 offset-lg-3 footer_col">
 						<div>
 							<div class="footer_title">About Us</div>
@@ -423,6 +425,7 @@
 					</div>
 
 					<!-- Help & Support -->
+					<!--
 					<div class="col-lg-2 footer_col">
 						<div class="footer_title">Help & Support</div>
 						<ul class="footer_list">
@@ -436,6 +439,7 @@
 					</div>
 
 					<!-- Privacy -->
+					<!--
 					<div class="col-lg-2 footer_col clearfix">
 						<div>
 							<div class="footer_title">Privacy & Terms</div>
@@ -456,9 +460,10 @@
 				<div class="row">
 					<div class="col">
 						<div class="copyright_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
-							<div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+				         <!--
 							<div class="cr_right ml-md-auto">
 								<div class="footer_phone"><span class="cr_title">phone:</span>+44 300 303 0266</div>
 								<div class="footer_social">
@@ -467,6 +472,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				                      -->
 									</ul>
 								</div>
 							</div>
