--- a/instructors.html
+++ b/instructors.html
@@ -279,7 +279,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h2 class="section_title text-center">Top Teachers in Every Field</h2>
+					<h2 class="section_title text-center">Наши педагоги</h2>
 				</div>
 			</div>
 			<div class="row teachers_row">
@@ -289,8 +289,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_4.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Мария Сорокина</a></div>
+							<div class="teacher_title">Педагог по испанскому</div>
 						</div>
 					</div>
 				</div>
@@ -300,8 +300,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_5.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">София Карло</a></div>
+							<div class="teacher_title">Педагог по итальянскому</div>
 						</div>
 					</div>
 				</div>
@@ -311,8 +311,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_6.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Олег Свенсон</a></div>
+							<div class="teacher_title">Педагог по шведскому</div>
 						</div>
 					</div>
 				</div>
@@ -322,8 +322,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_7.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Габриэль Мюллер</a></div>
+							<div class="teacher_title">Педагог по немецкому</div>
 						</div>
 					</div>
 				</div>
@@ -333,8 +333,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_8.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Антуан Дюваль</a></div>
+							<div class="teacher_title">Педагог по французскому</div>
 						</div>
 					</div>
 				</div>
@@ -344,8 +344,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_9.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Ли Чжэнь</a></div>
+							<div class="teacher_title">Педагог по китайскому</div>
 						</div>
 					</div>
 				</div>
@@ -355,8 +355,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_10.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Витаутас Гядис</a></div>
+							<div class="teacher_title">Педагог по литовскому</div>
 						</div>
 					</div>
 				</div>
@@ -366,8 +366,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_11.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Кендзи Танака</a></div>
+							<div class="teacher_title">Педагог по японскому</div>
 						</div>
 					</div>
 				</div>
@@ -377,8 +377,8 @@
 					<div class="teacher d-flex flex-row align-items-center justify-content-start">
 						<div class="teacher_image"><div><img src="images/instructor_12.jpg" alt=""></div></div>
 						<div class="teacher_content">
-							<div class="teacher_name"><a href="instructors.html">Sarah Parker</a></div>
-							<div class="teacher_title">Teacher</div>
+							<div class="teacher_name"><a href="instructors.html">Виктория Грей</a></div>
+							<div class="teacher_title">Педагог по английскому</div>
 						</div>
 					</div>
 				</div>
