--- a/contact.html
+++ b/contact.html
@@ -26,21 +26,21 @@
 					<div class="row">
 						<div class="col">
 							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<div class="top_bar_phone"><span class="top_bar_title">phone:</span>+44 300 303 0266</div>
+								<div class="top_bar_phone"><span class="top_bar_title">телефон:</span>+7 999 999 99 99</div>
 								<div class="top_bar_right ml-auto">
 
 									<!-- Language -->
 									<div class="top_bar_lang">
-										<span class="top_bar_title">site language:</span>
+										<span class="top_bar_title">язык сайта:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
-												<a href="#">English<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+												<a href="#">Русский<i class="fa fa-angle-down" aria-hidden="true"></i></a>
 												<ul>
-													<li><a href="#">Ukrainian</a></li>
-													<li><a href="#">Japanese</a></li>
-													<li><a href="#">Lithuanian</a></li>
-													<li><a href="#">Swedish</a></li>
-													<li><a href="#">Italian</a></li>
+													<li><a href="#">Английский</a></li>
+													<li><a href="#">Японский</a></li>
+													<li><a href="#">Литовский</a></li>
+													<li><a href="#">Шведский</a></li>
+													<li><a href="#">Итальянский</a></li>
 												</ul>
 											</li>
 										</ul>
@@ -48,11 +48,15 @@
 
 									<!-- Social -->
 									<div class="top_bar_social">
+										<!--
 										<span class="top_bar_title social_title">follow us</span>
+										-->
 										<ul>
+											<!--
 											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+											-->
 										</ul>
 									</div>
 								</div>
@@ -76,12 +80,12 @@
 							</div>
 							<nav class="main_nav_contaner">
 								<ul class="main_nav">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="courses.html">Courses</a></li>
-									<li><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li class="active"><a href="contact.html">Contact</a></li>
+									<li><a href="index.html">Главная</a></li>
+									<li><a href="courses.html">Курсы</a></li>
+									<li><a href="instructors.html">Педагоги</a></li>
+									<li><a href="#">События</a></li>
+									<li><a href="blog.html">Блог</a></li>
+									<li class="active"><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_content_right ml-auto text-right">
@@ -126,22 +130,26 @@
 		</div>
 		<nav class="menu_nav">
 			<ul class="menu_mm">
-				<li class="menu_mm"><a href="index.html">Home</a></li>
-				<li class="menu_mm"><a href="courses.html">Courses</a></li>
-				<li class="menu_mm"><a href="instructors.html">Instructors</a></li>
-				<li class="menu_mm"><a href="#">Events</a></li>
-				<li class="menu_mm"><a href="blog.html">Blog</a></li>
-				<li class="menu_mm"><a href="contact.html">Contact</a></li>
+				<li class="menu_mm"><a href="index.html">Главная</a></li>
+				<li class="menu_mm"><a href="courses.html">Курсы</a></li>
+				<li class="menu_mm"><a href="instructors.html">Педагоги</a></li>
+				<li class="menu_mm"><a href="#">События</a></li>
+				<li class="menu_mm"><a href="blog.html">Блог</a></li>
+				<li class="menu_mm"><a href="contact.html">Контакты</a></li>
 			</ul>
 		</nav>
 		<div class="menu_extra">
-			<div class="menu_phone"><span class="menu_title">phone:</span>+44 300 303 0266</div>
+			<div class="menu_phone"><span class="menu_title">телефон:</span>+7 999 999 99 99</div>
 			<div class="menu_social">
+				<!--
 				<span class="menu_title">follow us</span>
+				-->
 				<ul>
+					<!--
 					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					-->
 				</ul>
 			</div>
 		</div>
@@ -173,7 +181,7 @@
 				<!-- Details -->
 				<div class="col-lg-6">
 					<div class="contact_details">
-						<div class="contact_details_title">Contact Details</div>
+						<div class="contact_details_title">Детали</div>
 						<ul>
 							<li>
 								<svg fill="rgba(0,0,0,0.4)" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -181,14 +189,14 @@
 								    <path d="M0 0h24v24H0z" fill="none"/>
 								    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
 								</svg>
-								<span>9;00 AM - 18:00 PM</span>
+								<span>9:00- 18:00</span>
 							</li>
 							<li>
 								<svg fill="rgba(0,0,0,0.4)" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
 								    <path d="M0 0h24v24H0z" fill="none"/>
 								    <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
 								</svg>
-								<span>+44 300 303 0266</span>
+								<span>+7 999 999 99 99</span>
 							</li>
 							<li>
 								<svg fill="rgba(0,0,0,0.4)" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -197,12 +205,14 @@
 								</svg>
 								<span>info@lingua.com</span>
 							</li>
+							<!--
 							<li>
 								<svg fill="rgba(0,0,0,0.4)" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
 								    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
 								    <path d="M0 0h24v24H0z" fill="none"/>
 								</svg>
 								<span>10 Suffolk st Soho, London, UK</span>
+							-->
 							</li>
 						</ul>
 					</div>
@@ -211,20 +221,20 @@
 				<!-- Form -->
 				<div class="col-lg-6">
 					<div class="contact_form_container">
-						<div class="form_title">Get in Touch</div>
+						<div class="form_title">Связаться с нами</div>
 						<form action="#" id="contact_form" class="contact_form">
 							<div class="row contact_row">
 								<div class="col-lg-6 contact_col">
-									<input type="text" class="form_input" placeholder="Name" required="required">
+									<input type="text" class="form_input" placeholder="Имя" required="required">
 								</div>
 								<div class="col-lg-6 contact_col">
-									<input type="email" class="form_input" placeholder="Email" required="required">
+									<input type="email" class="form_input" placeholder="Почта" required="required">
 								</div>
 								<div class="col-lg-12">
-									<textarea class="form_input form_text" placeholder="Message" required="required"></textarea>
+									<textarea class="form_input form_text" placeholder="Введите текст..." required="required"></textarea>
 								</div>
 								<div class="col">
-									<button type="submit" class="form_button trans_200">send message</button>
+									<button type="submit" class="form_button trans_200">Отправить</button>
 								</div>
 							</div>
 						</form>
@@ -242,6 +252,7 @@
 				<div class="row">
 
 					<!-- Newsletter -->
+					<!--
 					<div class="col-lg-3 footer_col">
 						<div class="newsletter_container d-flex flex-column align-items-start justify-content-end">
 							<div class="footer_logo mb-auto"><a href="#">Lingua</a></div>
@@ -254,6 +265,7 @@
 					</div>
 
 					<!-- About -->
+					<!--
 					<div class="col-lg-2 offset-lg-3 footer_col">
 						<div>
 							<div class="footer_title">About Us</div>
@@ -270,6 +282,7 @@
 					</div>
 
 					<!-- Help & Support -->
+					<!--
 					<div class="col-lg-2 footer_col">
 						<div class="footer_title">Help & Support</div>
 						<ul class="footer_list">
@@ -283,6 +296,7 @@
 					</div>
 
 					<!-- Privacy -->
+					<!--
 					<div class="col-lg-2 footer_col clearfix">
 						<div>
 							<div class="footer_title">Privacy & Terms</div>
@@ -303,10 +317,11 @@
 				<div class="row">
 					<div class="col">
 						<div class="copyright_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
-							<div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<div class="cr"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-							<div class="cr_right ml-md-auto">
+							  <!--
+			                   <div class="cr_right ml-md-auto">
 								<div class="footer_phone"><span class="cr_title">phone:</span>+44 300 303 0266</div>
 								<div class="footer_social">
 									<span class="cr_social_title">follow us</span>
@@ -314,6 +329,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				                         -->
 									</ul>
 								</div>
 							</div>
