removing unused routes from header

--- a/course.html
+++ b/course.html
@@ -136,8 +136,8 @@
 				<li class="menu_mm"><a href="index.html">Главная</a></li>
 				<li class="menu_mm"><a href="courses.html">Курсы</a></li>
 				<li class="menu_mm"><a href="instructors.html">Педагоги</a></li>
-				<li class="menu_mm"><a href="#">События</a></li>
-				<li class="menu_mm"><a href="blog.html">Блог</a></li>
+				<!-- <li class="menu_mm"><a href="#">События</a></li> -->
+				<!-- <li class="menu_mm"><a href="blog.html">Блог</a></li> -->
 				<li class="menu_mm"><a href="contact.html">Контакты</a></li>
 			</ul>
 		</nav>
@@ -261,6 +261,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 
 									<!-- Instructor -->
 									<!--
@@ -273,6 +274,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 
 									<!-- Instructor -->
 									<!--
@@ -285,6 +287,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 
 									<!-- Instructor -->
 									<!--
@@ -297,6 +300,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 
 									<!-- Instructor -->
 									<!--
@@ -309,6 +313,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 
 								</div>
 							</div>
