--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,8 @@
 									<li><a href="index.html">Главная</a></li>
 									<li><a href="courses.html">Курсы</a></li>
 									<li><a href="instructors.html">Педагоги</a></li>
-									<li><a href="#">События</a></li>
-									<li><a href="blog.html">Блог</a></li>
+									<!-- <li><a href="#">События</a></li> -->
+									<!-- <li><a href="blog.html">Блог</a></li> -->
 									<li class="active"><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
