--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 									<li class="active"><a href="index.html">Главная</a></li>
 									<li><a href="courses.html">Courses</a></li>
 									<li><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
+									<!-- <li><a href="#">Events</a></li> -->
+									<!-- <li><a href="blog.html">Blog</a></li> -->
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
