--- a/regular.html
+++ b/regular.html
@@ -83,8 +83,8 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="courses.html">Courses</a></li>
 									<li><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
+									<!-- <li><a href="#">Events</a></li> -->
+									<!-- <li><a href="blog.html">Blog</a></li> -->
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
