removing unused routes from menu

--- a/course.html
+++ b/course.html
@@ -86,8 +86,8 @@
 									<li><a href="index.html">Главная</a></li>
 									<li class="active"><a href="courses.html">Курсы</a></li>
 									<li><a href="instructors.html">Педагоги</a></li>
-									<li><a href="#">События</a></li>
-									<li><a href="blog.html">Блог</a></li>
+									<!-- <li><a href="#">События</a></li> -->
+									<!-- <li><a href="blog.html">Блог</a></li> -->
 									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
