--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 				<li class="menu_mm"><a href="index.html">Home</a></li>
 				<li class="menu_mm"><a href="courses.html">Courses</a></li>
 				<li class="menu_mm"><a href="instructors.html">Instructors</a></li>
-				<li class="menu_mm"><a href="#">Events</a></li>
-				<li class="menu_mm"><a href="blog.html">Blog</a></li>
+				<!-- <li class="menu_mm"><a href="#">Events</a></li> -->
+				<!-- <li class="menu_mm"><a href="blog.html">Blog</a></li> -->
 				<li class="menu_mm"><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
