--- a/contact.html
+++ b/contact.html
@@ -133,8 +133,8 @@
 				<li class="menu_mm"><a href="index.html">Главная</a></li>
 				<li class="menu_mm"><a href="courses.html">Курсы</a></li>
 				<li class="menu_mm"><a href="instructors.html">Педагоги</a></li>
-				<li class="menu_mm"><a href="#">События</a></li>
-				<li class="menu_mm"><a href="blog.html">Блог</a></li>
+				<!-- <li class="menu_mm"><a href="#">События</a></li> -->
+				<!-- <li class="menu_mm"><a href="blog.html">Блог</a></li> -->
 				<li class="menu_mm"><a href="contact.html">Контакты</a></li>
 			</ul>
 		</nav>
